--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>My Resume</title>
 
@@ -13,7 +14,66 @@
   <![endif]-->
 </head>
 
+<header>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">History</a>
+    <a href="#">Contact</a>
+  </nav>
+</header>
+
 <body>
-  <h1>My Resume</h1>
+
+  <section class = "heroSection">
+    <div class = "introWrapper">
+    <img class ="heroImage" src="images/colorado-mountain.jpg" alt="Picture of Mountains">
+    <div class = "textContainer">
+      <h1>My Resume</h1>
+      <p>Web Developer Extraordinaire</p>
+    </div>
+    </div>
+  </section>
+
+  <section class = "midSection">
+    <div class = "wrapper">
+
+      <div class = "textContainer">
+        <h2>Cool stuff about me</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis et sed sit at perferendis, veniam nisi quas expedita ipsam libero praesentium neque, officia voluptates perspiciatis. Reprehenderit, veniam optio? Debitis, ad!</p>
+      </div>
+
+      <div class = "textContainer">
+        <h2>Stuff I'm good at</h2>
+        <div class = "innerContainer">
+          <p>Foreign Language</p>
+          <p>HTML</p>
+          <p>CSS</p>
+          <p>JavaScript</p>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <section class = "lowerSection">
+    <div class = "textContainer">
+
+      <h2>Work History</h2>
+      <div class = "innerContainer">
+        <div class = "bar">
+          <p>filler</p>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <footer>
+    <div>
+      <p>Copyright JP 2020</p>
+    </div>
+  </footer>
+  
 </body>
 </html>
