--- a/index.html
+++ b/index.html
@@ -38,18 +38,40 @@
   <section class = "midSection">
     <div class = "wrapper">
 
-      <div class = "textContainer">
+      <div class = "textContainer blurb">
         <h2>Cool stuff about me</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis et sed sit at perferendis, veniam nisi quas expedita ipsam libero praesentium neque, officia voluptates perspiciatis. Reprehenderit, veniam optio? Debitis, ad!</p>
+        <p>
+          Life is either a daring adventure or nothing. . . I'm not sure which, but at least I've narrowed it down.
+          I'm rich with life experiences, but have had trouble exchanging them for goods and services.
+        </p>  
+        <p>
+          Times have been hard. To save on money, I moved out of my old apartment and into a luxurious ravine.
+          I didn't like that apartment anyway; it was always getting looted and never at a reasonable hour.
+          And if it wasn't looters it was the solicitors, or sometimes both would come at once,
+          and there wouldn't be enough chairs. The ravine is great; you get lots of sun,
+          and you can just drop garbage wherever you want.  
+        </p>
+        <p>
+          In my free time I've taken up begging. Begging is brilliant conceptually,
+          but tricky in practice since no one has any money. You beg pennies from the locals,
+          and they beg them back, but no one really seems to come out ahead. That's just how life is sometimes.
+          You're quietly conquering the world, minding your own business, when suddenly the repo man comes,
+          or looters, you find yourself on the street, and it's all you can do to cling to some wreckage
+          as the storm passes through. Still, I am sure that, as always, I'll triumph over this adversity,
+          or at least do slightly better than everyone else.
+        </p>
       </div>
 
       <div class = "textContainer">
-        <h2>Stuff I'm good at</h2>
+        <h2>Stuff I can do...</h2>
         <div class = "innerContainer">
-          <p>Foreign Language</p>
-          <p>HTML</p>
-          <p>CSS</p>
-          <p>JavaScript</p>
+          <p>Speak foreign languages</p>
+          <p>Pat head and rub belly simultaneously</p>
+          <p>Cossack dance</p>
+          <p>Code some basic stuff</p>
+          <p>Stand on one leg</p>
+          <p>Build a model car out of macaroni</p>
+          <p>Write words kinda ok</p>
         </div>
       </div>
 
@@ -66,6 +88,13 @@
         </div>
       </div>
 
+    </div>
+  </section>
+
+  <section class = contactSection>
+    <div class = "textContainer">
+      <h2>Contact info</h2>
+      <p>Address: Here</p>
     </div>
   </section>
 
