--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header>
   <nav>
     <a href="#">Home</a>
-    <a href="#">About</a>
+    <a href="#">Portfolio</a>
     <a href="#">History</a>
     <a href="#">Contact</a>
   </nav>
@@ -83,9 +83,45 @@
 
       <h2>Work History</h2>
       <div class = "innerContainer">
+
         <div class = "bar">
-          <p>filler</p>
+          <p>Year</p>
         </div>
+        <div class = "bar">
+          <p>Company</p>
+        </div>
+        <div class = "bar">
+          <p>Title</p>
+        </div>
+
+      </div>
+
+      <div class = "innerContainer">
+
+        <div class = "bar">
+          <p>1915</p>
+        </div>
+        <div class = "bar">
+          <p>French Foreign Legion</p>
+        </div>
+        <div class = "bar">
+          <p>Soldat</p>
+        </div>
+        
+      </div>
+
+      <div class = "innerContainer">
+
+        <div class = "bar">
+          <p>2010</p>
+        </div>
+        <div class = "bar">
+          <p>Holes inc.</p>
+        </div>
+        <div class = "bar">
+          <p>Ditch Digger</p>
+        </div>
+        
       </div>
 
     </div>
